--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "python-multipart>=0.0.6",
     "pydantic-settings>=2.0.3",
     "psycopg (>=3.2.9,<4.0.0)",
-    "psycopg2 (>=2.9.10,<3.0.0)"
+    "psycopg2 (>=2.9.10,<3.0.0)",
+    "aiogram (>=3.22.0,<4.0.0)"
 ]
 
 [build-system]
