--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,35 @@
-[project]
-name = "Disk_shop"
+[tool.poetry]
+name = "disk_shop"
 version = "0.1.0"
 description = "Backend for game disc store"
-authors = [
-    {name = "SailorLekalo", email = "shamshev-andrei@yandex.ru"}
-]
+authors = ["SailorLekalo <shamshev-andrei@yandex.ru>"]
 readme = "README.md"
-requires-python = ">=3.10"
-dependencies = [
-    "fastapi>=0.104.1",
-    "strawberry-graphql[fastapi]>=0.212.1",
-    "sqlalchemy[asyncio]>=2.0.23",
-    "asyncpg>=0.29.0",
-    "alembic>=1.13.1",
-    "passlib[bcrypt]>=1.7.4",
-    "python-dotenv>=1.0.0",
-    "uvicorn[standard]>=0.23.2",
-    "python-multipart>=0.0.6",
-    "pydantic-settings>=2.0.3",
-    "psycopg (>=3.2.9,<4.0.0)",
-    "psycopg2 (>=2.9.10,<3.0.0)",
-    "aiogram (>=3.22.0,<4.0.0)"
-]
+packages = [{ include = "app" }]
+
+[tool.poetry.dependencies]
+python = ">=3.10"
+fastapi = ">=0.104.1"
+strawberry-graphql = { version = ">=0.212.1", extras = ["fastapi"] }
+sqlalchemy = { version = ">=2.0.23", extras = ["asyncio"] }
+asyncpg = ">=0.29.0"
+alembic = ">=1.13.1"
+passlib = { version = ">=1.7.4", extras = ["bcrypt"] }
+python-dotenv = ">=1.0.0"
+uvicorn = { version = ">=0.23.2", extras = ["standard"] }
+python-multipart = ">=0.0.6"
+pydantic-settings = ">=2.0.3"
+aiogram = ">=3.22.0,<4.0.0"
+
+psycopg = ">=3.2.9,<4.0.0"
+
+[tool.poetry.group.dev.dependencies]
+ipython = ">=8.17.2"
+pytest = ">=7.4.0"
+pytest-asyncio = ">=0.23.0"
+httpx = ">=0.25.0"
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
+requires = ["poetry-core>=1.8.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
@@ -35,11 +40,3 @@ makemigrations = "alembic revision --autogenerate -m"
 [tool.alembic]
 script_location = "app/migrations"
 sqlalchemy.url = "postgresql+asyncpg://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:5432/${DB_NAME}"
-
-[project.optional-dependencies]
-dev = [
-    "ipython>=8.17.2",
-    "pytest>=7.4.0",
-    "pytest-asyncio>=0.23.0",
-    "httpx>=0.25.0"
-]
