--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ uvicorn = { version = ">=0.23.2", extras = ["standard"] }
 python-multipart = ">=0.0.6"
 pydantic-settings = ">=2.0.3"
 aiogram = ">=3.22.0,<4.0.0"
-
+bcrypt = ">=4.0.1"
 psycopg = ">=3.2.9,<4.0.0"
 
 [tool.poetry.group.dev.dependencies]
