--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,5 +57,8 @@ ignore = [
     "D203",
     "D212",
     "E501",
+    "D100", "D101", "D102", "D103", "D104", # docstring не нужны тестовому, полагаю
+    "RUF001"
+
 ]
 fix = true
