Websocket subscription now working, i guess.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,9 @@ ignore = [
     "D212",
     "E501",
     "D100", "D101", "D102", "D103", "D104", # docstring не нужны тестовому, полагаю
-    "RUF001"
+    "RUF001",
+    "UP017",
+    "UP035"
 
 ]
 fix = true
