Removed timezone bugs at all

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,8 @@ ignore = [
     "D100", "D101", "D102", "D103", "D104", # docstring не нужны тестовому, полагаю
     "RUF001",
     "UP017",
-    "UP035"
+    "UP035",
+    "DTZ005"
 
 ]
 fix = true
