--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,8 @@ target-version = "py311"
 line-length = 88
 exclude = [
     ".venv",
-    "migrations"
+    "migrations",
+    "tests"
 ]
 select = ["ALL"]
 ignore = [
