--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ aiogram = ">=3.22.0,<4.0.0"
 bcrypt = ">=4.0.1"
 psycopg = ">=3.2.9,<4.0.0"
 websockets = "^15.0.1"
+broadcaster = "^0.3.1"
 
 [tool.poetry.group.dev.dependencies]
 ipython = ">=8.17.2"
